--- a/PubNub/PubNub.xcodeproj/xcshareddata/xcschemes/PubNub-Framework.xcscheme
+++ b/PubNub/PubNub.xcodeproj/xcshareddata/xcschemes/PubNub-Framework.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0700"
-   version = "1.8">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "000333AA1B27BEF1008C973D"
                BuildableName = "PubNub.framework"
-               BlueprintName = "PubNub-Framework"
+               BlueprintName = "PubNubFramework"
                ReferencedContainer = "container:PubNub.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,7 +44,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "000333AA1B27BEF1008C973D"
             BuildableName = "PubNub.framework"
-            BlueprintName = "PubNub-Framework"
+            BlueprintName = "PubNubFramework"
             ReferencedContainer = "container:PubNub.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -66,7 +66,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "000333AA1B27BEF1008C973D"
             BuildableName = "PubNub.framework"
-            BlueprintName = "PubNub-Framework"
+            BlueprintName = "PubNubFramework"
             ReferencedContainer = "container:PubNub.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -84,7 +84,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "000333AA1B27BEF1008C973D"
             BuildableName = "PubNub.framework"
-            BlueprintName = "PubNub-Framework"
+            BlueprintName = "PubNubFramework"
             ReferencedContainer = "container:PubNub.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
