--- a/PubNub/PubNub.xcodeproj/xcshareddata/xcschemes/PubNub-Framework.xcscheme
+++ b/PubNub/PubNub.xcodeproj/xcshareddata/xcschemes/PubNub-Framework.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "0700"
-   version = "1.3">
+   version = "1.8">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "000333AA1B27BEF1008C973D"
-               BuildableName = "PubNub.framework"
+               BuildableName = "PubNubFramework.framework"
                BlueprintName = "PubNubFramework"
                ReferencedContainer = "container:PubNub.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "000333AA1B27BEF1008C973D"
-            BuildableName = "PubNub.framework"
+            BuildableName = "PubNubFramework.framework"
             BlueprintName = "PubNubFramework"
             ReferencedContainer = "container:PubNub.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "000333AA1B27BEF1008C973D"
-            BuildableName = "PubNub.framework"
+            BuildableName = "PubNubFramework.framework"
             BlueprintName = "PubNubFramework"
             ReferencedContainer = "container:PubNub.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "000333AA1B27BEF1008C973D"
-            BuildableName = "PubNub.framework"
+            BuildableName = "PubNubFramework.framework"
             BlueprintName = "PubNubFramework"
             ReferencedContainer = "container:PubNub.xcodeproj">
          </BuildableReference>
